# cloakpipe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  challenges.md
.github/workflows/: ci.yml
assets/: cloakpipe-demo.cast  generate_cast.py
crates/cloakpipe-audit/: Cargo.toml
crates/cloakpipe-audit/src/: lib.rs
crates/cloakpipe-cli/: Cargo.toml
crates/cloakpipe-cli/src/: commands.rs  main.rs
crates/cloakpipe-core/: Cargo.toml
crates/cloakpipe-core/src/: config.rs  lib.rs  profiles.rs  rehydrator.rs  replacer.rs  resolver.rs  session.rs  vault.rs  vault_sqlite.rs
crates/cloakpipe-core/src/detector/: custom.rs  financial.rs  mod.rs  patterns.rs
crates/cloakpipe-core/tests/: integration.rs
crates/cloakpipe-local/: Cargo.toml
crates/cloakpipe-local/src/: lib.rs
crates/cloakpipe-mcp/: Cargo.toml
crates/cloakpipe-mcp/src/: lib.rs
crates/cloakpipe-proxy/: Cargo.toml
crates/cloakpipe-proxy/src/: handlers.rs  lib.rs  server.rs  state.rs  streaming.rs  tree_handlers.rs
crates/cloakpipe-tree/: Cargo.toml
crates/cloakpipe-tree/src/: extractor.rs  indexer.rs  lib.rs  parser.rs  search.rs  storage.rs  tree.rs
crates/cloakpipe-vector/: Cargo.toml
crates/cloakpipe-vector/src/: lib.rs
dashboard/src/: App.tsx
dashboard/src/components/: Layout.tsx
dashboard/src/lib/: tree-api.ts
dashboard/src/pages/: Chat.tsx  KnowledgeBase.tsx  Sessions.tsx
docs/: ARCHITECTURE.md  PLAN.md  TECH.md
policies/: default.toml
