[package]
name = "cloakpipe-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured audit logging for CloakPipe"

[dependencies]
cloakpipe-core = { path = "../cloakpipe-core", version = "0.6.0" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
