[package]
name = "cloakpipe-cli"
version.workspace = true
edition.workspace = true
description = "CLI binary for CloakPipe privacy proxy"

[[bin]]
name = "cloakpipe"
path = "src/main.rs"

[dependencies]
cloakpipe-core = { path = "../cloakpipe-core" }
cloakpipe-proxy = { path = "../cloakpipe-proxy" }
cloakpipe-audit = { path = "../cloakpipe-audit" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rand.workspace = true
