[package]
name = "cloakpipe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for CloakPipe privacy proxy"

[[bin]]
name = "cloakpipe"
path = "src/main.rs"

[dependencies]
cloakpipe-core = { path = "../cloakpipe-core", version = "0.1.0" }
cloakpipe-proxy = { path = "../cloakpipe-proxy", version = "0.1.0" }
cloakpipe-audit = { path = "../cloakpipe-audit", version = "0.1.0" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rand.workspace = true
