[package]
name = "cloakpipe-proxy"
version.workspace = true
edition.workspace = true
description = "OpenAI-compatible HTTP proxy with privacy middleware"

[dependencies]
cloakpipe-core = { path = "../cloakpipe-core" }
cloakpipe-audit = { path = "../cloakpipe-audit" }
tokio.workspace = true
axum.workspace = true
hyper.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
anyhow.workspace = true
http-body-util.workspace = true
